added max power

--- a/platformio.ini
+++ b/platformio.ini
@@ -84,7 +84,7 @@ build_flags =
 	-D LED_DEFAULT_COLOR_ORDER=GRB
 	-D LED_DEFAULT_INVERT_DIRECTION=false
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_MAX_BRIGHTNESS=0.4f
+	-D LED_BRIGHTNESS_FACTOR=0.4f
 
 
 [creator]
@@ -102,7 +102,6 @@ build_flags =
 	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_COUNT=32
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_MAX_BRIGHTNESS=0.2f
 	-D PLAYBACK_USE_ALPHA
 	-D PLAYBACK_MAX_SCRIPTS=32
 	-D USE_FX
@@ -149,7 +148,11 @@ build_flags =
 	-D LED_DEFAULT_TYPE=SK9822
 	-D LED_DEFAULT_COLOR_ORDER=BGR
 	-D LED_DEFAULT_INVERT_DIRECTION=true
+	-D LED_DEFAULT_COUNT=32
 	-D LED_MAX_COUNT=32
+	-D LED_BRIGHTNESS_FACTOR=0.2f
+	-D LED_DEFAULT_MAX_POWER=1200
+	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
 
 [env:creatortab]
 extends = creator
@@ -166,6 +169,7 @@ build_flags =
 	-D LED_DEFAULT_COLOR_ORDER=GRB
 	-D LED_DEFAULT_INVERT_DIRECTION=false
 	-D LED_MAX_COUNT=1000
+	-D LED_BRIGHTNESS_FACTOR=0.2f
 
 
 [env:olimex]
@@ -192,7 +196,7 @@ build_flags =
 	-D LED_DEFAULT_COLOR_ORDER=BGR
 	-D LED_DEFAULT_INVERT_DIRECTION=false
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_MAX_BRIGHTNESS=0.4f
+	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_MAX_COUNT=1000
 	-D PLAYBACK_USE_ALPHA
 	-D PLAYBACK_MAX_SCRIPTS=32
