Component split setup/init and ESPNow WIP

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = creatorclub
+default_envs = espnowm5bridge
+; default_envs = creatorclub
 
 [blip]
 platform = espressif32 @ 6.9.0
@@ -62,18 +63,19 @@ build_flags =
 	-D USE_WIFI
 	-D USE_OSC
 
-
 [env:generic]
 extends = blip
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_GENERIC
 	-D USE_IO
-	-D IO_MAX_COUNT=4
+	-D IO_MAX_COUNT=16
 	-D IO_DEFAULT_PIN=35
 	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_INPUT
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
+	-D USE_ARTNET
+	-D USE_ESPNOW
 	-D LEDSTRIP_MAX_COUNT=1
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=33
@@ -85,7 +87,10 @@ build_flags =
 	-D LED_DEFAULT_INVERT_DIRECTION=false
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
 	-D LED_BRIGHTNESS_FACTOR=0.4f
-
+	-D LED_DEFAULT_MAX_POWER=1200
+	-D LED_LEDS_PER_PIXEL=1
+	-D USE_PWMLED
+	-D PWMLED_MAX_COUNT=4
 
 [creator]
 extends = blip
@@ -97,6 +102,8 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
+	-D USE_ARTNET
+	-D USE_ESPNOW
 	-D LEDSTRIP_MAX_COUNT=1
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=25
@@ -133,7 +140,6 @@ build_flags =
 	-D IMU_DEFAULT_SDA=23
 	-D IMU_DEFAULT_SCL=22
 	-D IMU_DEFAULT_ADDR=0x28
-
 
 [env:creatorclub]
 extends = creator
@@ -240,6 +246,7 @@ build_flags =
 	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D DISPLAY_SHOW_DBG
 	-D USE_WIFI
+	-D USE_ESPNOW
 	-D USE_OSC
 	-D USE_IO
 	-D USE_BUTTON
@@ -323,3 +330,10 @@ build_flags =
 	-D USE_BUTTON
 	-D BUTTON_MAX_COUNT=4
 	-D BUTTON_DEFAULT_PIN=36
+
+[env:espnowm5bridge]
+extends = m5stickc
+build_flags = 
+	${m5stickc.build_flags}
+	-D BLIP_ESPNOWBRIDGE
+	-D ESPNOW_BRIDGE
