espnow working color streaming

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = espnowm5bridge
+default_envs = creatorclub, creatorclub9, espnowm5bridge
 ; default_envs = creatorclub
 
 [blip]
@@ -156,9 +156,26 @@ build_flags =
 	-D LED_DEFAULT_INVERT_DIRECTION=true
 	-D LED_DEFAULT_COUNT=32
 	-D LED_MAX_COUNT=32
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
+upload_port = COM8
+
+[env:creatorclub9]
+extends = creator
+build_flags = 
+	${creator.build_flags}
+	-D BLIP_CREATORCLUB
+	-D USE_POWER
+	-D POWER_WAKEUP_BUTTON=32
+	-D USE_LEDSTRIP
+	-D USE_STREAMING
+	-D LED_DEFAULT_CLK_PIN=26
+	-D LED_DEFAULT_TYPE=SK9822
+	-D LED_DEFAULT_COLOR_ORDER=BGR
+	-D LED_DEFAULT_INVERT_DIRECTION=true
+	-D LED_DEFAULT_COUNT=32
+	-D LED_MAX_COUNT=32
+	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
+upload_port = COM9
 
 [env:creatortab]
 extends = creator
@@ -337,3 +354,4 @@ build_flags =
 	${m5stickc.build_flags}
 	-D BLIP_ESPNOWBRIDGE
 	-D ESPNOW_BRIDGE
+upload_port = COM5
