ESPNow + Wifi WIP

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = creatorclub, creatorclub9, espnowm5bridge
+default_envs =creatorclub, espnowm5bridge  ;, creatorclub9
 ; default_envs = creatorclub
 
 [blip]
@@ -109,6 +109,8 @@ build_flags =
 	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_COUNT=32
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
+	-D LED_BRIGHTNESS_FACTOR=0.4f
+	-D LED_DEFAULT_MAX_POWER=1200
 	-D PLAYBACK_USE_ALPHA
 	-D PLAYBACK_MAX_SCRIPTS=32
 	-D USE_FX
@@ -354,4 +356,7 @@ build_flags =
 	${m5stickc.build_flags}
 	-D BLIP_ESPNOWBRIDGE
 	-D ESPNOW_BRIDGE
+	-D USE_STREAMING
+	-D USE_ARTNET
+
 upload_port = COM5
