--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs =creatorclub, espnowm5bridge  ;, creatorclub9
-; default_envs = creatorclub
+; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
+default_envs = creatorclub6, creatorclub, creatorclub9
 
 [blip]
 platform = espressif32 @ 6.9.0
@@ -179,6 +179,24 @@ build_flags =
 	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
 upload_port = COM9
 
+[env:creatorclub6]
+extends = creator
+build_flags = 
+	${creator.build_flags}
+	-D BLIP_CREATORCLUB
+	-D USE_POWER
+	-D POWER_WAKEUP_BUTTON=32
+	-D USE_LEDSTRIP
+	-D USE_STREAMING
+	-D LED_DEFAULT_CLK_PIN=26
+	-D LED_DEFAULT_TYPE=SK9822
+	-D LED_DEFAULT_COLOR_ORDER=BGR
+	-D LED_DEFAULT_INVERT_DIRECTION=true
+	-D LED_DEFAULT_COUNT=32
+	-D LED_MAX_COUNT=32
+	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
+upload_port = COM6
+
 [env:creatortab]
 extends = creator
 build_flags = 
@@ -271,6 +289,8 @@ build_flags =
 	-D USE_BUTTON
 	-D BUTTON_MAX_COUNT=2
 	-D BUTTON_DEFAULT_PIN=37
+	-D POWER_WAKEUP_BUTTON=39
+	-D POWER_WAKEUP_BUTTON_STATE=false
 	-D USE_FILES
 	-D FILES_TYPE_SPIFFS
 	-D USE_MOTION
@@ -358,5 +378,15 @@ build_flags =
 	-D ESPNOW_BRIDGE
 	-D USE_STREAMING
 	-D USE_ARTNET
-
 upload_port = COM5
+
+
+[env:espnowm5node]
+extends = m5stickc
+build_flags = 
+	${m5stickc.build_flags}
+	-D BLIP_ESPNOWNODE
+	-D USE_STREAMING
+	-D USE_ARTNET
+	-D USE_LEDSTRIP
+upload_port = COM24
