auto pairing, channel hopping and pinging

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 ; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
-default_envs = creatorclub6, creatorclub, creatorclub9
+default_envs = creatorclub ;creatorclub6, creatorclub, creatorclub9
 
 [blip]
 platform = espressif32 @ 6.9.0
