added test mode (double click)

--- a/platformio.ini
+++ b/platformio.ini
@@ -103,7 +103,7 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D USE_ARTNET
-	-D USE_ESPNOW
+	; -D USE_ESPNOW
 	-D LEDSTRIP_MAX_COUNT=1
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=25
@@ -158,8 +158,9 @@ build_flags =
 	-D LED_DEFAULT_INVERT_DIRECTION=true
 	-D LED_DEFAULT_COUNT=32
 	-D LED_MAX_COUNT=32
-	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
-upload_port = COM8
+	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel4
+	; -D USE_BEHAVIOUR
+; upload_port = COM8
 
 [env:creatorclub9]
 extends = creator
