make things work on C6 (breaks esp32 standard stuff)

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,19 +10,16 @@
 
 [platformio]
 ; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
-default_envs = creatorclub ;creatorclub6, creatorclub, creatorclub9
+default_envs = xiaocube ;creatorclub6, creatorclub, creatorclub9
 
 [blip]
-platform = espressif32 @ 6.9.0
-platform_packages = framework-arduinoespressif32
-board = esp32dev
+; platform = espressif32 @ 6.9.0
+; platform_packages = framework-arduinoespressif32
+; board = esp32dev
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.0
-	https://github.com/adafruit/Adafruit_BNO055.git
 	Wire
-	adafruit/Adafruit Unified Sensor
-	adafruit/Adafruit BusIO
 	SPI
 	Preferences
 	WiFi
@@ -35,23 +32,15 @@ lib_deps =
 	https://github.com/contrem/arduino-timer
 	wasm3/Wasm3 @ ^0.5.0
 	https://github.com/jshaw/SimplexNoise
-	madhephaestus/ESP32Servo @ ^0.11.0
 	https://github.com/rstephan/ArtnetWifi
 	https://github.com/benkuper/ESPAsyncWebServer
 	https://github.com/Links2004/arduinoWebSockets
 	me-no-dev/AsyncTCP @ ^1.1.1
-	gin66/FastAccelStepper @ ^0.30.13
+
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
 upload_speed = 921600
 monitor_speed = 115200
-lib_compat_mode = strict
-lib_ldf_mode = deep
-board_build.f_cpu = 240000000L
-board_build.f_flash = 40000000L
-board_build.flash_mode = dio
-board_build.mcu = esp32
-board_build.variant = esp32
-board_build.partitions = huge_app.csv
+
 build_flags = 
 	-D ARDUINO_BLIP
 	-D USE_SERIAL
@@ -65,6 +54,14 @@ build_flags =
 
 [env:generic]
 extends = blip
+lib_compat_mode = strict
+lib_ldf_mode = deep
+board_build.f_cpu = 240000000L
+board_build.f_flash = 40000000L
+board_build.flash_mode = dio
+board_build.mcu = esp32
+board_build.variant = esp32
+board_build.partitions = huge_app.csv
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_GENERIC
@@ -142,6 +139,11 @@ build_flags =
 	-D IMU_DEFAULT_SDA=23
 	-D IMU_DEFAULT_SCL=22
 	-D IMU_DEFAULT_ADDR=0x28
+lib_deps = 
+	${blip.lib_deps}
+	https://github.com/adafruit/Adafruit_BNO055.git
+	adafruit/Adafruit Unified Sensor
+	adafruit/Adafruit BusIO
 
 [env:creatorclub]
 extends = creator
@@ -314,9 +316,13 @@ build_flags =
 	-D USE_SERVO
 	-D SERVO_DEFAULT_PIN=26
 
+lib_deps = 
+	${m5stickc.lib_deps}
+	madhephaestus/ESP32Servo @ ^0.11.0
 
 [env:motor]
 extends = blip
+board = featheresp32
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_M5SERVO
@@ -335,8 +341,10 @@ build_flags =
 	-D DC_MOTOR_DEFAULT_EN_PIN=26
 	-D DC_MOTOR_DEFAULT_DIR1_PIN=36
 	-D DC_MOTOR_DEFAULT_DIR2_PIN=0
-lib_deps = ${blip.lib_deps}
-board = featheresp32
+
+lib_deps = 
+	${blip.lib_deps}
+	gin66/FastAccelStepper @ ^0.30.13
 
 [env:feathertuino]
 extends = blip
@@ -391,3 +399,23 @@ build_flags =
 	-D USE_ARTNET
 	-D USE_LEDSTRIP
 upload_port = COM24
+
+
+[env:xiaocube]
+extends =  blip
+platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
+    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
+framework = arduino
+board = seeed_xiao_esp32c6
+build_flags = 
+	${blip.build_flags}
+	; -D ARDUINO_USB_CDC_ON_BOOT=0
+	-D BLIP_XIAOCUBE
+	-D USE_SERIAL
+	-D USE_PWMLED
+	-D PWMLED_MAX_COUNT=4
+	-D USE_FILES
+	-D FILES_TYPE_SPIFFS
+	-D USE_IO
