--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,16 @@
         "format": "cpp",
         "xhash": "cpp",
         "xstring": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "set": "cpp",
+        "iterator": "cpp",
+        "memory_resource": "cpp",
+        "optional": "cpp",
+        "numbers": "cpp",
+        "span": "cpp"
     }
 }
