--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
-default_envs = xiaocube ;creatorclub6, creatorclub, creatorclub9
+default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
+; default_envs = xiaocube ;creatorclub6, creatorclub, creatorclub9
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -26,7 +26,7 @@ lib_deps =
 	bblanchon/ArduinoJson @ ^6.18.5
 	SPIFFS
 	SD
-	https://github.com/benkuper/OSC
+	https://github.com/benkuper/OSC#1.0.0
 	ESPmDNS
 	adafruit/Adafruit DotStar @ ^1.2.0
 	https://github.com/contrem/arduino-timer
@@ -270,6 +270,7 @@ lib_deps =
 
 [m5stickc]
 extends = blip
+board = m5stick-c
 platform = espressif32
 board_build.f_cpu = 240000000L
 upload_speed = 1500000
@@ -307,7 +308,6 @@ lib_deps =
 
 [env:m5stick-generic]
 extends = m5stickc
-board = m5stick-c
 
 [env:m5servo]
 extends = m5stickc
@@ -416,6 +416,23 @@ build_flags =
 	-D USE_SERIAL
 	-D USE_PWMLED
 	-D PWMLED_MAX_COUNT=4
+	-D PWMLED_SHOW_INIT
+	-D PWMLED_SHOW_SHUTDOWN
+	-D PWMLED_SHOW_CONNECTION
 	-D USE_FILES
 	-D FILES_TYPE_SPIFFS
 	-D USE_IO
+	-D IO_DEFAULT_PIN=15
+	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
+	-D WIFI_C6_USE_EXTERNAL_ANTENNA
+	-D USE_BUTTON
+	-D BUTTON_DEFAULT_PIN=2
+	-D USE_BATTERY
+	-D BATTERY_DEFAULT_PIN=0
+	-D BATTERY_VOLTAGE_CUSTOM_FUNC=getVoltage_c6
+	-D USE_POWER
+	-D POWER_EXT=1
+	-D POWER_WAKEUP_BUTTON=2
+	-D POWER_WAKEUP_BUTTON_STATE=true
+	-D USE_ESPNOW
+	
