blip_base / blip3

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
-; default_envs = xiaocube ;creatorclub6, creatorclub, creatorclub9
+; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
+default_envs = xiaocube ;creatorclub6, creatorclub, creatorclub9
 
-[blip]
+[blip_base]
 ; platform = espressif32 @ 6.9.0
 ; platform_packages = framework-arduinoespressif32
 ; board = esp32dev
@@ -26,7 +26,6 @@ lib_deps =
 	bblanchon/ArduinoJson @ ^6.18.5
 	SPIFFS
 	SD
-	https://github.com/benkuper/OSC#1.0.0
 	ESPmDNS
 	adafruit/Adafruit DotStar @ ^1.2.0
 	https://github.com/contrem/arduino-timer
@@ -51,6 +50,18 @@ build_flags =
 	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D USE_WIFI
 	-D USE_OSC
+
+[blip]
+extends = blip_base
+lib_deps=
+	${blip_base.lib_deps}
+	https://github.com/benkuper/OSC#1.0.0
+
+[blip3]
+extends = blip_base
+lib_deps=
+	${blip_base.lib_deps}
+	https://github.com/benkuper/OSC
 
 [env:generic]
 extends = blip
@@ -88,6 +99,8 @@ build_flags =
 	-D LED_LEDS_PER_PIXEL=1
 	-D USE_PWMLED
 	-D PWMLED_MAX_COUNT=4
+
+	
 
 [creator]
 extends = blip
@@ -402,7 +415,7 @@ upload_port = COM24
 
 
 [env:xiaocube]
-extends =  blip
+extends =  blip3
 platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
 platform_packages = 
     framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
@@ -435,4 +448,5 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON=2
 	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_ESPNOW
+
 	
