--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 ; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
-default_envs = xiaocube ;creatorclub6, creatorclub, creatorclub9
+default_envs = xiaobridge ;creatorclub6, creatorclub, creatorclub9
 
 [blip_base]
 ; platform = espressif32 @ 6.9.0
@@ -413,18 +413,19 @@ build_flags =
 	-D USE_LEDSTRIP
 upload_port = COM24
 
-
-[env:xiaocube]
-extends =  blip3
+[xiaoc6]
+extends = blip3
 platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
 platform_packages = 
     framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
     framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
 framework = arduino
 board = seeed_xiao_esp32c6
+
+[env:xiaocube]
+extends =  xiaoc6
 build_flags = 
-	${blip.build_flags}
-	; -D ARDUINO_USB_CDC_ON_BOOT=0
+	${xiaoc6.build_flags}
 	-D BLIP_XIAOCUBE
 	-D USE_SERIAL
 	-D USE_PWMLED
@@ -449,4 +450,15 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_ESPNOW
 
-	
+[env:xiaobridge]
+extends = xiaoc6 
+build_flags = 
+	${xiaoc6.build_flags}
+	-D BLIP_XIAOCUBE
+	-D USE_SERIAL
+	-D USE_FILES
+	-D FILES_TYPE_SPIFFS
+	-D USE_IO
+	-D WIFI_C6_USE_EXTERNAL_ANTENNA
+	-D USE_ESPNOW
+	-D ESPNOW_BRIDGE
