Added support for Ethernet + ESPNow

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 ; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
-default_envs = xiaobridge ;creatorclub6, creatorclub, creatorclub9
+default_envs = poebridge ;creatorclub6, creatorclub, creatorclub9
 
 [blip_base]
 ; platform = espressif32 @ 6.9.0
@@ -55,7 +55,7 @@ build_flags =
 extends = blip_base
 lib_deps=
 	${blip_base.lib_deps}
-	https://github.com/benkuper/OSC#1.0.0
+	https://github.com/CNMAT/OSC
 
 [blip3]
 extends = blip_base
@@ -231,19 +231,36 @@ build_flags =
 	-D LED_BRIGHTNESS_FACTOR=0.2f
 
 
-[env:olimex]
+[olimex]
 extends = blip
 platform = espressif32
 board = esp32-poe
 build_flags = 
 	${blip.build_flags}
-	-D BLIP_CREATORTAB
 	-D USE_ETHERNET=true
 	-D WIFI_DEFAULT_MODE=MODE_ETH
 	-D USE_POWER
 	-D POWER_KEEP_PIN=12
 	-D POWER_WAKEUP_BUTTON=34
 	-D POWER_WAKEUP_BUTTON_STATE=true
+	-D USE_IO
+	-D USE_BUTTON
+	-D BUTTON_MAX_COUNT=4
+	-D BUTTON_DEFAULT_PIN=34
+	-D USE_FILES
+	-D FILES_TYPE_SPIFFS
+	
+lib_deps = 
+	${blip.lib_deps}
+	FS
+
+[env:olimexnode]
+extends = olimex
+platform = espressif32
+board = esp32-poe
+build_flags = 
+	${olimex.build_flags}
+	-D BLIP_OLIMEXNODE
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D LEDSTRIP_MAX_COUNT=5
@@ -260,26 +277,7 @@ build_flags =
 	-D PLAYBACK_USE_ALPHA
 	-D PLAYBACK_MAX_SCRIPTS=32
 	-D USE_FX
-	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=4
-	-D BUTTON_DEFAULT_PIN=34
-	-D USE_IO
-	-D IO_MAX_COUNT=4
-	-D IO_DEFAULT_PIN=-1
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
-	-D USE_FILES
-	-D FILES_TYPE_MMC
-	-D FILES_DEFAULT_SDSPEED=27000000
-	-D FILES_DEFAULT_SD_EN=33
-	-D FILES_DEFAULT_SD_POWER_VALUE=LOW
-	-D FILES_DEFAULT_SD_MISO=19
-	-D FILES_DEFAULT_SD_MOSI=13
-	-D FILES_DEFAULT_SD_SCK=14
-	-D FILES_DEFAULT_SD_CS=15
 	-D USE_SCRIPT
-lib_deps = 
-	${blip.lib_deps}
-	FS
 
 [m5stickc]
 extends = blip
@@ -462,3 +460,12 @@ build_flags =
 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
 	-D USE_ESPNOW
 	-D ESPNOW_BRIDGE
+
+[env:poebridge]
+extends = olimex 
+build_flags = 
+	${olimex.build_flags}
+	-D BLIP_XIAOCUBE
+	-D USE_ESPNOW
+	-D ESPNOW_BRIDGE
+
