Refactor LedStreaming for more general purpose

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-; default_envs =  espnowm5bridge ;, creatorclub9, espnowm5node ;, espnowm5bridge,, espnowm5node ; espnowm5bridge ;,espnowm5node ,  espnowm5bridge  ;, ;creatorclub9;
-default_envs = poebridge ;creatorclub6, creatorclub, creatorclub9
+; default_envs =  xiaocube 
+default_envs = xiaocube ;, poebridge
 
-[blip_base]
+[blip]
 ; platform = espressif32 @ 6.9.0
 ; platform_packages = framework-arduinoespressif32
 ; board = esp32dev
@@ -35,6 +35,7 @@ lib_deps =
 	https://github.com/benkuper/ESPAsyncWebServer
 	https://github.com/Links2004/arduinoWebSockets
 	me-no-dev/AsyncTCP @ ^1.1.1
+	https://github.com/CNMAT/OSC
 
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
 upload_speed = 921600
@@ -50,18 +51,6 @@ build_flags =
 	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D USE_WIFI
 	-D USE_OSC
-
-[blip]
-extends = blip_base
-lib_deps=
-	${blip_base.lib_deps}
-	https://github.com/CNMAT/OSC
-
-[blip3]
-extends = blip_base
-lib_deps=
-	${blip_base.lib_deps}
-	https://github.com/benkuper/OSC
 
 [env:generic]
 extends = blip
@@ -99,6 +88,7 @@ build_flags =
 	-D LED_LEDS_PER_PIXEL=1
 	-D USE_PWMLED
 	-D PWMLED_MAX_COUNT=4
+	-D TESTMODE_PRESSCOUNT=6
 
 	
 
@@ -237,7 +227,7 @@ platform = espressif32
 board = esp32-poe
 build_flags = 
 	${blip.build_flags}
-	-D USE_ETHERNET=true
+	-D USE_ETHERNET
 	-D WIFI_DEFAULT_MODE=MODE_ETH
 	-D USE_POWER
 	-D POWER_KEEP_PIN=12
@@ -412,13 +402,14 @@ build_flags =
 upload_port = COM24
 
 [xiaoc6]
-extends = blip3
+extends = blip
 platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
 platform_packages = 
     framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
     framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
 framework = arduino
 board = seeed_xiao_esp32c6
+board_build.partitions = huge_app.csv
 
 [env:xiaocube]
 extends =  xiaoc6
@@ -426,11 +417,17 @@ build_flags =
 	${xiaoc6.build_flags}
 	-D BLIP_XIAOCUBE
 	-D USE_SERIAL
+	-D USE_STREAMING
 	-D USE_PWMLED
 	-D PWMLED_MAX_COUNT=4
 	-D PWMLED_SHOW_INIT
 	-D PWMLED_SHOW_SHUTDOWN
 	-D PWMLED_SHOW_CONNECTION
+	-D PWMLED_DEFAULT_RPIN=17
+	-D PWMLED_DEFAULT_GPIN=19
+	-D PWMLED_DEFAULT_BPIN=20
+	-D PWMLED_DEFAULT_WPIN=18
+	-D PWMLED_USE_STREAMING
 	-D USE_FILES
 	-D FILES_TYPE_SPIFFS
 	-D USE_IO
@@ -447,6 +444,7 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON=2
 	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_ESPNOW
+	-D ESPNOW_ENABLED_PRESSCOUNT=5
 
 [env:xiaobridge]
 extends = xiaoc6 
@@ -468,4 +466,5 @@ build_flags =
 	-D BLIP_XIAOCUBE
 	-D USE_ESPNOW
 	-D ESPNOW_BRIDGE
+	-D ESPNOW_PAIRING_PRESSCOUNT=2
 
