Working Streaming with Wifi/ESPNow switch

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-; default_envs =  xiaocube 
+; default_envs =  poebridge 
 default_envs = xiaocube ;, poebridge
 
 [blip]
@@ -418,6 +418,7 @@ build_flags =
 	-D BLIP_XIAOCUBE
 	-D USE_SERIAL
 	-D USE_STREAMING
+	-D USE_ARTNET
 	-D USE_PWMLED
 	-D PWMLED_MAX_COUNT=4
 	-D PWMLED_SHOW_INIT
@@ -457,6 +458,7 @@ build_flags =
 	-D USE_IO
 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
 	-D USE_ESPNOW
+	-D USE_ARTNET
 	-D ESPNOW_BRIDGE
 
 [env:poebridge]
@@ -467,4 +469,6 @@ build_flags =
 	-D USE_ESPNOW
 	-D ESPNOW_BRIDGE
 	-D ESPNOW_PAIRING_PRESSCOUNT=2
+	-D USE_STREAMING
+	-D USE_ARTNET
 
