waveshare eth bridge mods

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-; default_envs =  poebridge 
-default_envs = xiaocube ;, poebridge
+default_envs =  wavesharebridge 
+; default_envs = xiaocube ; , olimexbridge
+; default_envs = creatorclub
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -69,10 +70,11 @@ build_flags =
 	-D IO_MAX_COUNT=16
 	-D IO_DEFAULT_PIN=35
 	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_INPUT
-	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D USE_ARTNET
 	-D USE_ESPNOW
+
+	-D USE_LEDSTRIP
 	-D LEDSTRIP_MAX_COUNT=1
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=33
@@ -157,6 +159,7 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON=32
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
+	-D LEDSTRIP_USE_FASTLED
 	-D LED_DEFAULT_CLK_PIN=26
 	-D LED_DEFAULT_TYPE=SK9822
 	-D LED_DEFAULT_COLOR_ORDER=BGR
@@ -239,6 +242,40 @@ build_flags =
 	-D BUTTON_DEFAULT_PIN=34
 	-D USE_FILES
 	-D FILES_TYPE_SPIFFS
+	
+lib_deps = 
+	${blip.lib_deps}
+	FS
+
+[waveshare]
+extends = blip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+board = esp32s3_120_16_8-qio_opi
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
+board_build.arduino.partitions = default_16MB.csv
+board_build.arduino.memory_type = qio_opi
+board_upload.flash_size = 16MB
+board_build.partitions = huge_app.csv
+build_flags = 
+	${blip.build_flags}
+	-D BOARD_HAS_PSRAM
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D USE_ETHERNET
+	-D ETHERNET_CHIP_W5500
+	-D WIFI_DEFAULT_MODE=MODE_ETH
+	-D USE_POWER
+	-D POWER_KEEP_PIN=12
+	-D POWER_WAKEUP_BUTTON=34
+	-D POWER_WAKEUP_BUTTON_STATE=true
+	-D USE_IO
+	-D USE_BUTTON
+	-D BUTTON_MAX_COUNT=4
+	-D BUTTON_DEFAULT_PIN=34
+
+	; -D USE_FILES
+	; -D FILES_TYPE_SPIFFS
 	
 lib_deps = 
 	${blip.lib_deps}
@@ -428,6 +465,9 @@ build_flags =
 	-D PWMLED_DEFAULT_GPIN=19
 	-D PWMLED_DEFAULT_BPIN=20
 	-D PWMLED_DEFAULT_WPIN=18
+	-D PWMLED_DEFAULT_16BIT_STREAM=true
+	-D PWMLED_DEFAULT_RESOLUTION=14
+	-D PWMLED_DEFAULT_FREQUENCY=1
 	-D PWMLED_USE_STREAMING
 	-D USE_FILES
 	-D FILES_TYPE_SPIFFS
@@ -461,11 +501,22 @@ build_flags =
 	-D USE_ARTNET
 	-D ESPNOW_BRIDGE
 
-[env:poebridge]
+[env:olimexbridge]
 extends = olimex 
 build_flags = 
 	${olimex.build_flags}
-	-D BLIP_XIAOCUBE
+	-D BLIP_OLIMEXBRIDGE
+	-D USE_ESPNOW
+	-D ESPNOW_BRIDGE
+	-D ESPNOW_PAIRING_PRESSCOUNT=2
+	-D USE_STREAMING
+	-D USE_ARTNET
+
+[env:wavesharebridge]
+extends = waveshare 
+build_flags = 
+	${waveshare.build_flags}
+	-D BLIP_WAVESHAREBRIDGE
 	-D USE_ESPNOW
 	-D ESPNOW_BRIDGE
 	-D ESPNOW_PAIRING_PRESSCOUNT=2
