Not working ESP-ETH Waveshare

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,7 +33,7 @@ lib_deps =
 	wasm3/Wasm3 @ ^0.5.0
 	https://github.com/jshaw/SimplexNoise
 	https://github.com/rstephan/ArtnetWifi
-	https://github.com/benkuper/ESPAsyncWebServer
+	https://github.com/ESP32Async/ESPAsyncWebServer
 	https://github.com/Links2004/arduinoWebSockets
 	me-no-dev/AsyncTCP @ ^1.1.1
 	https://github.com/CNMAT/OSC
@@ -249,8 +249,8 @@ lib_deps =
 
 [waveshare]
 extends = blip
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
-board = esp32s3_120_16_8-qio_opi
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.07/platform-espressif32.zip
+board = esp32-s3-devkitc-1
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.arduino.partitions = default_16MB.csv
@@ -274,8 +274,8 @@ build_flags =
 	-D BUTTON_MAX_COUNT=4
 	-D BUTTON_DEFAULT_PIN=34
 
-	; -D USE_FILES
-	; -D FILES_TYPE_SPIFFS
+	-D USE_FILES
+	-D FILES_TYPE_SPIFFS
 	
 lib_deps = 
 	${blip.lib_deps}
