added default parameters and fix oscComponent 3.x compil

--- a/platformio.ini
+++ b/platformio.ini
@@ -429,6 +429,9 @@ build_flags =
 	-D PWMLED_DEFAULT_BPIN=20
 	-D PWMLED_DEFAULT_WPIN=18
 	-D PWMLED_USE_STREAMING
+	-D PWMLED_DEFAULT_16BIT_STREAM=true 
+	-D PWMLED_DEFAULT_RESOLUTION=14 
+	-D PWMLED_DEFAULT_FREQUENCY=1 
 	-D USE_FILES
 	-D FILES_TYPE_SPIFFS
 	-D USE_IO
@@ -446,6 +449,7 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_ESPNOW
 	-D ESPNOW_ENABLED_PRESSCOUNT=5
+
 
 [env:xiaobridge]
 extends = xiaoc6 
