updated for creatorball WIP

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 ; default_envs =  poebridge 
-default_envs = xiaocube ;, poebridge
+default_envs = creatorball ;, poebridge
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -97,17 +97,12 @@ extends = blip
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_CREATORCLUB
-	-D USE_POWER
-	-D POWER_KEEP_PIN=12
-	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D USE_ARTNET
 	; -D USE_ESPNOW
 	-D LEDSTRIP_MAX_COUNT=1
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_DATA_PIN=25
-	-D LED_DEFAULT_COUNT=32
+
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
@@ -116,32 +111,24 @@ build_flags =
 	-D USE_FX
 	-D USE_BUTTON
 	-D BUTTON_MAX_COUNT=1
-	-D BUTTON_DEFAULT_PIN=32
 	-D USE_IO
 	-D IO_MAX_COUNT=1
-	-D IO_DEFAULT_PIN=17
 	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
 	-D USE_BATTERY
-	-D BATTERY_DEFAULT_PIN=35
-	-D BATTERY_DEFAULT_CHARGE_PIN=-1
+
 	-D BATTERY_DEFAUT_RAW_MIN=222
 	-D BATTERY_DEFAULT_RAW_MAX=335
 	-D BATTERY_DEFAULT_LOW_VOLTAGE=3.5f
 	-D USE_FILES
 	-D USE_SCRIPT
-	-D FILES_DEFAULT_SDSPEED=27000000
-	-D FILES_DEFAULT_SD_EN=16
-	-D FILES_DEFAULT_SD_POWER_VALUE=LOW
-	-D FILES_DEFAULT_SD_MISO=19
-	-D FILES_DEFAULT_SD_MOSI=13
-	-D FILES_DEFAULT_SD_SCK=14
-	-D FILES_DEFAULT_SD_CS=15
+	-D FILES_DEFAULT_SPEED=27000000
+	-D FILES_DEFAULT_EN=16
+	-D FILES_DEFAULT_POWER_VALUE=LOW
+
 	-D USE_MOTION
 	-D IMU_TYPE_BNO055
-	-D IMU_DEFAULT_INT=33
-	-D IMU_DEFAULT_SDA=23
-	-D IMU_DEFAULT_SCL=22
 	-D IMU_DEFAULT_ADDR=0x28
+
 lib_deps = 
 	${blip.lib_deps}
 	https://github.com/adafruit/Adafruit_BNO055.git
@@ -153,10 +140,18 @@ extends = creator
 build_flags = 
 	${creator.build_flags}
 	-D BLIP_CREATORCLUB
+	
 	-D USE_POWER
 	-D POWER_WAKEUP_BUTTON=32
+	-D POWER_KEEP_PIN=12
+	-D POWER_WAKEUP_BUTTON_STATE=true
+
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
+
+	-D LED_DEFAULT_COUNT=32
+	-D LED_DEFAULT_EN_PIN=27
+	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_CLK_PIN=26
 	-D LED_DEFAULT_TYPE=SK9822
 	-D LED_DEFAULT_COLOR_ORDER=BGR
@@ -164,44 +159,84 @@ build_flags =
 	-D LED_DEFAULT_COUNT=32
 	-D LED_MAX_COUNT=32
 	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel4
+	
+	-D IMU_DEFAULT_INT=33
+	-D IMU_DEFAULT_SDA=23
+	-D IMU_DEFAULT_SCL=22
+
+	-D FILES_DEFAULT_MISO=19
+	-D FILES_DEFAULT_MOSI=13
+	-D FILES_DEFAULT_SCK=14
+	-D FILES_DEFAULT_CS=15
+
+	-D BUTTON_DEFAULT_PIN=32
+	-D BUTTON_DEFAULT_MODE=D_INPUT
+
+	-D BATTERY_DEFAULT_PIN=35
+	-D BATTERY_DEFAULT_CHARGE_PIN=-1
+
+	-D IO_DEFAULT_PIN=17
+
+
 	; -D USE_BEHAVIOUR
 ; upload_port = COM8
 
-[env:creatorclub9]
+[env:creatorball]
 extends = creator
-build_flags = 
-	${creator.build_flags}
-	-D BLIP_CREATORCLUB
-	-D USE_POWER
-	-D POWER_WAKEUP_BUTTON=32
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-	-D LED_DEFAULT_CLK_PIN=26
-	-D LED_DEFAULT_TYPE=SK9822
-	-D LED_DEFAULT_COLOR_ORDER=BGR
-	-D LED_DEFAULT_INVERT_DIRECTION=true
-	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=32
-	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
-upload_port = COM9
 
-[env:creatorclub6]
-extends = creator
+platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
+    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
+framework = arduino
+board = seeed_xiao_esp32c6
+board_build.partitions = huge_app.csv
+
 build_flags = 
 	${creator.build_flags}
 	-D BLIP_CREATORCLUB
-	-D USE_POWER
-	-D POWER_WAKEUP_BUTTON=32
+	; -D POWER_EXT=1
+	-D POWER_KEEP_PIN=1
+	-D POWER_WAKEUP_BUTTON=7
+	-D BUTTON_DEFAULT_PIN=7
+	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
+	-D BUTTON_DEFAULT_SHUTDOWN=false
+
+	-D BATTERY_DEFAULT_PIN=6
+	-D BATTERY_DEFAULT_CHARGE_PIN=14
+
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
-	-D LED_DEFAULT_CLK_PIN=26
-	-D LED_DEFAULT_TYPE=SK9822
+	-D LED_USE_FASTLED
+	-D LED_DEFAULT_TYPE=WS2816
+	-D LED_DEFAULT_EN_PIN=20
+	-D LED_DEFAULT_DATA_PIN=3
+	-D LED_DEFAULT_DATA_BACKUP_PIN=2
+	-D LED_DEFAULT_CLK_PIN=-1
 	-D LED_DEFAULT_COLOR_ORDER=BGR
 	-D LED_DEFAULT_INVERT_DIRECTION=true
-	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=32
-	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel
-upload_port = COM6
+	-D LED_DEFAULT_COUNT=12
+	-D LED_MAX_COUNT=12
+	-D LED_LEDS_PER_PIXEL=1
+	-D LED_CHARGE_DISABLE_PIN=9;
+
+	-D IO_DEFAULT_PIN=18
+	-D IO_DEFAULT_PIN2=19 ; to implement
+	
+	-D FILES_TYPE_WIN25N
+	-D FILES_DEFAULT_MISO=8
+	-D FILES_DEFAULT_MOSI=5
+	-D FILES_DEFAULT_SCK=4
+	-D FILES_DEFAULT_CS=15
+
+	-D IMU_DEFAULT_SDA=23
+	-D IMU_DEFAULT_SCL=22
+	-D IMU_DEFAULT_INT=-1
+	-D IMU_EXT_CRYSTAL=0x80
+
+lib_deps = 
+	${creator.lib_deps}
+	; FastLED
 
 [env:creatortab]
 extends = creator
