--- a/platformio.ini
+++ b/platformio.ini
@@ -199,7 +199,7 @@ build_flags =
 	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
 	-D BUTTON_DEFAULT_PIN=7
-	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
+	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLUP
 	-D BUTTON_DEFAULT_SHUTDOWN=false
 
 	-D BATTERY_DEFAULT_PIN=6
@@ -208,15 +208,16 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D LED_USE_FASTLED
+	-D LED_16BIT_HACK
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_EN_PIN=20
 	-D LED_DEFAULT_DATA_PIN=3
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_DEFAULT_COLOR_ORDER=BGR
+	-D LED_COLOR_ORDER=GBR
 	-D LED_DEFAULT_INVERT_DIRECTION=true
 	-D LED_DEFAULT_COUNT=12
-	-D LED_MAX_COUNT=12
+	-D LED_MAX_COUNT=50
 	-D LED_LEDS_PER_PIXEL=1
 	-D LED_CHARGE_DISABLE_PIN=9;
 
@@ -236,7 +237,7 @@ build_flags =
 
 lib_deps = 
 	${creator.lib_deps}
-	; FastLED
+	FastLED
 
 [env:creatortab]
 extends = creator
