fix leds and io update on value change only

--- a/platformio.ini
+++ b/platformio.ini
@@ -110,9 +110,9 @@ build_flags =
 	-D PLAYBACK_MAX_SCRIPTS=32
 	-D USE_FX
 	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=1
+	-D BUTTON_MAX_COUNT=4
 	-D USE_IO
-	-D IO_MAX_COUNT=1
+	-D IO_MAX_COUNT=4
 	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
 	-D USE_BATTERY
 
@@ -194,8 +194,9 @@ board_build.partitions = huge_app.csv
 
 build_flags = 
 	${creator.build_flags}
-	-D BLIP_CREATORCLUB
+	-D BLIP_CREATORBALL
 	; -D POWER_EXT=1
+	-D ARDUINO_NEW_VERSION
 	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
 	-D BUTTON_DEFAULT_PIN=7
@@ -208,7 +209,6 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D LED_USE_FASTLED
-	-D LED_16BIT_HACK
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_EN_PIN=20
 	-D LED_DEFAULT_DATA_PIN=3
