--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; To merge bin (ex creatorball)
+; python "C:\Users\bkupe\.platformio\packages\tool-esptoolpy\esptool.py" --chip esp32c6 merge_bin -o merged-firmware.bin --flash_mode dio --flash_freq 80m --flash_size 4MB 0x0000 C:\Users\bkupe\Documents\Projects\Dev\BLIP\.pio\build\creatorball\bootloader.bin 0x8000 C:\Users\bkupe\Documents\Projects\Dev\BLIP\.pio\build\creatorball\partitions.bin 0xe000 C:\Users\bkupe\.platformio\packages\framework-arduinoespressif32\tools\partitions\boot_app0.bin 0x10000 .pio\build\creatorball\firmware.bin
+; merge bin creator club
+
+
 [platformio]
 ; default_envs =  poebridge 
-default_envs = creatorball ;, poebridge
+default_envs = creatorclub ;, poebridge
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -90,8 +95,6 @@ build_flags =
 	-D PWMLED_MAX_COUNT=4
 	-D TESTMODE_PRESSCOUNT=6
 
-	
-
 [creator]
 extends = blip
 build_flags = 
@@ -136,6 +139,8 @@ lib_deps =
 	adafruit/Adafruit BusIO
 
 [env:creatorclub]
+platform = espressif32
+board = esp32dev
 extends = creator
 build_flags = 
 	${creator.build_flags}
