--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@
 
 [platformio]
 ; default_envs =  poebridge 
-default_envs = creatorclub ;, poebridge
+default_envs = creatorball ;, poebridge
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -107,8 +107,8 @@ build_flags =
 	-D LEDSTRIP_MAX_COUNT=1
 
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
+	; -D LED_BRIGHTNESS_FACTOR=0.4f
+	; -D LED_DEFAULT_MAX_POWER=1200
 	-D PLAYBACK_USE_ALPHA
 	-D PLAYBACK_MAX_SCRIPTS=32
 	-D USE_FX
@@ -201,26 +201,27 @@ build_flags =
 	${creator.build_flags}
 	-D BLIP_CREATORBALL
 	; -D POWER_EXT=1
-	-D ARDUINO_NEW_VERSION
 	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
 	-D BUTTON_DEFAULT_PIN=7
 	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLUP
-	-D BUTTON_DEFAULT_SHUTDOWN=false
+	-D BUTTON_DEFAULT_SHUTDOWN=true
 
 	-D BATTERY_DEFAULT_PIN=6
 	-D BATTERY_DEFAULT_CHARGE_PIN=14
 
+	; -D USE_16BIT_COLOR
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D LED_USE_FASTLED
+	-D LED_BRIGHTNESS_FACTOR=1.0f
+	-D LED_DEFAULT_MAX_POWER=0
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_EN_PIN=20
 	-D LED_DEFAULT_DATA_PIN=3
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 	-D LED_DEFAULT_CLK_PIN=-1
 	-D LED_COLOR_ORDER=GBR
-	-D LED_DEFAULT_INVERT_DIRECTION=true
 	-D LED_DEFAULT_COUNT=12
 	-D LED_MAX_COUNT=50
 	-D LED_LEDS_PER_PIXEL=1
@@ -461,6 +462,7 @@ build_flags =
 	-D USE_STREAMING
 	-D USE_ARTNET
 	-D USE_PWMLED
+	-D USE_16BIT_COLOR
 	-D PWMLED_MAX_COUNT=4
 	-D PWMLED_SHOW_INIT
 	-D PWMLED_SHOW_SHUTDOWN
