update IO and ledstrip

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@
 
 [platformio]
 ; default_envs =  poebridge 
-default_envs = creatorball ;, poebridge
+default_envs = creatorclub ;, poebridge
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -204,7 +204,7 @@ build_flags =
 	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
 	-D BUTTON_DEFAULT_PIN=7
-	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLUP
+	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
 	-D BUTTON_DEFAULT_SHUTDOWN=true
 
 	-D BATTERY_DEFAULT_PIN=6
@@ -226,6 +226,7 @@ build_flags =
 	-D LED_MAX_COUNT=50
 	-D LED_LEDS_PER_PIXEL=1
 	-D LED_CHARGE_DISABLE_PIN=9;
+	-D LED_DEFAULT_CORRECTION=false
 
 	-D IO_DEFAULT_PIN=18
 	-D IO_DEFAULT_PIN2=19 ; to implement
@@ -240,6 +241,9 @@ build_flags =
 	-D IMU_DEFAULT_SCL=22
 	-D IMU_DEFAULT_INT=-1
 	-D IMU_EXT_CRYSTAL=0x80
+
+	-D USE_BEHAVIOUR
+	-D BEHAVIOUR_MAX_COUNT=4
 
 lib_deps = 
 	${creator.lib_deps}
