strip power on shutdown, proper ws closing and more
device type change, d_output by default

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@
 
 [platformio]
 ; default_envs =  poebridge 
-default_envs = creatorclub ;, poebridge
+default_envs = creatorclub ;// poebridge ;
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -99,7 +99,6 @@ build_flags =
 extends = blip
 build_flags = 
 	${blip.build_flags}
-	-D BLIP_CREATORCLUB
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D USE_ARTNET
@@ -132,6 +131,9 @@ build_flags =
 	-D IMU_TYPE_BNO055
 	-D IMU_DEFAULT_ADDR=0x28
 
+	; -D USE_ESPNOW
+	; -D ESPNOW_ENABLED_PRESSCOUNT=5
+
 lib_deps = 
 	${blip.lib_deps}
 	https://github.com/adafruit/Adafruit_BNO055.git
@@ -144,7 +146,7 @@ board = esp32dev
 extends = creator
 build_flags = 
 	${creator.build_flags}
-	-D BLIP_CREATORCLUB
+	-D DEVICE_TYPE="\"CreatorClub\""
 	
 	-D USE_POWER
 	-D POWER_WAKEUP_BUTTON=32
@@ -199,7 +201,8 @@ board_build.partitions = huge_app.csv
 
 build_flags = 
 	${creator.build_flags}
-	-D BLIP_CREATORBALL
+	-D DEVICE_TYPE="\"CreatorBall\""
+
 	; -D POWER_EXT=1
 	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
@@ -222,7 +225,7 @@ build_flags =
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 	-D LED_DEFAULT_CLK_PIN=-1
 	-D LED_COLOR_ORDER=GBR
-	-D LED_DEFAULT_COUNT=12
+	-D LED_DEFAULT_COUNT=20
 	-D LED_MAX_COUNT=50
 	-D LED_LEDS_PER_PIXEL=1
 	-D LED_CHARGE_DISABLE_PIN=9;
@@ -456,6 +459,42 @@ platform_packages =
 framework = arduino
 board = seeed_xiao_esp32c6
 board_build.partitions = huge_app.csv
+
+[env:xiaoc6generic]
+extends = xiaoc6
+build_flags = 
+	${xiaoc6.build_flags}
+	-D USE_SERIAL
+	-D USE_STREAMING
+	-D USE_ARTNET
+	-D USE_FILES
+	-D FILES_TYPE_SPIFFS
+	-D USE_IO
+	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
+	-D WIFI_C6_USE_EXTERNAL_ANTENNA
+	-D USE_BUTTON
+	-D BUTTON_DEFAULT_PIN=2
+	-D USE_BATTERY
+	-D BATTERY_DEFAULT_PIN=0
+	-D BATTERY_VOLTAGE_CUSTOM_FUNC=getVoltage_c6
+	-D USE_POWER
+	-D POWER_EXT=1
+	-D POWER_WAKEUP_BUTTON=2
+	-D POWER_WAKEUP_BUTTON_STATE=true
+	-D USE_ESPNOW
+	-D ESPNOW_ENABLED_PRESSCOUNT=5
+	-D LEDSTRIP_MAX_COUNT=1
+	-D LED_DEFAULT_DATA_PIN=17
+	-D LED_DEFAULT_CLK_PIN=19
+	-D LED_DEFAULT_COUNT=200
+	-D LED_MAX_COUNT=1000
+	-D LED_DEFAULT_TYPE=SK9822
+	-D LED_DEFAULT_COLOR_ORDER=GRB
+	-D LED_DEFAULT_INVERT_DIRECTION=false
+	-D LED_DEFAULT_BRIGHTNESS=0.6f
+	-D LED_BRIGHTNESS_FACTOR=0.4f
+	-D LED_DEFAULT_MAX_POWER=2000
+	-D LED_LEDS_PER_PIXEL=1
 
 [env:xiaocube]
 extends =  xiaoc6
