--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@
 
 [platformio]
 ; default_envs =  poebridge 
-default_envs = creatorclub ;// poebridge ;
+default_envs = creatorball ;// poebridge ;
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -225,7 +225,7 @@ build_flags =
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 	-D LED_DEFAULT_CLK_PIN=-1
 	-D LED_COLOR_ORDER=GBR
-	-D LED_DEFAULT_COUNT=20
+	-D LED_DEFAULT_COUNT=37
 	-D LED_MAX_COUNT=50
 	-D LED_LEDS_PER_PIXEL=1
 	-D LED_CHARGE_DISABLE_PIN=9;
