fix SystemLayer and xiaoc6generic

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@
 
 [platformio]
 ; default_envs =  poebridge 
-default_envs = creatorball ;// poebridge ;
+default_envs = xiaoc6generic ;// poebridge ;
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -482,19 +482,26 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON=2
 	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_ESPNOW
+	-D ESPNOW_DEFAULT_ENABLED=false
 	-D ESPNOW_ENABLED_PRESSCOUNT=5
+	-D USE_LEDSTRIP
+	-D LED_USE_FASTLED
 	-D LEDSTRIP_MAX_COUNT=1
 	-D LED_DEFAULT_DATA_PIN=17
 	-D LED_DEFAULT_CLK_PIN=19
 	-D LED_DEFAULT_COUNT=200
 	-D LED_MAX_COUNT=1000
 	-D LED_DEFAULT_TYPE=SK9822
-	-D LED_DEFAULT_COLOR_ORDER=GRB
+	-D LED_DEFAULT_COLOR_ORDER=BGR
 	-D LED_DEFAULT_INVERT_DIRECTION=false
 	-D LED_DEFAULT_BRIGHTNESS=0.6f
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=2000
 	-D LED_LEDS_PER_PIXEL=1
+	
+lib_deps = 
+	${xiaoc6.lib_deps}
+	FastLED
 
 [env:xiaocube]
 extends =  xiaoc6
