LittleFS and asyncWebServer

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@
 
 [platformio]
 ; default_envs =  poebridge 
-default_envs = xiaoc6generic ;// poebridge ;
+default_envs = creatorclub ;// poebridge ;
 
 [blip]
 ; platform = espressif32 @ 6.9.0
@@ -29,17 +29,16 @@ lib_deps =
 	Preferences
 	WiFi
 	bblanchon/ArduinoJson @ ^6.18.5
-	SPIFFS
 	SD
+	LittleFS
 	ESPmDNS
 	adafruit/Adafruit DotStar @ ^1.2.0
 	https://github.com/contrem/arduino-timer
 	wasm3/Wasm3 @ ^0.5.0
 	https://github.com/jshaw/SimplexNoise
 	https://github.com/rstephan/ArtnetWifi
-	https://github.com/benkuper/ESPAsyncWebServer
-	https://github.com/Links2004/arduinoWebSockets
-	me-no-dev/AsyncTCP @ ^1.1.1
+	ESP32Async/AsyncTCP
+  	ESP32Async/ESPAsyncWebServer
 	https://github.com/CNMAT/OSC
 
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
@@ -48,10 +47,11 @@ monitor_speed = 115200
 
 build_flags = 
 	-D ARDUINO_BLIP
+	-D BLIP_VERSION="\"0.9.0\""
 	-D USE_SERIAL
 	-D USE_SERVER
 	-D WS_MAX_QUEUED_MESSAGES=64
-	-D USE_ASYNC_WEBSOCKET=0
+	-D USE_ASYNC_WEBSOCKET	
 	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
 	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D USE_WIFI
@@ -272,7 +272,10 @@ build_flags =
 
 [olimex]
 extends = blip
-platform = espressif32
+platform = https://github.com/mnowak32/platform-espressif32.git
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
+    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
 board = esp32-poe
 build_flags = 
 	${blip.build_flags}
@@ -287,7 +290,7 @@ build_flags =
 	-D BUTTON_MAX_COUNT=4
 	-D BUTTON_DEFAULT_PIN=34
 	-D USE_FILES
-	-D FILES_TYPE_SPIFFS
+	-D FILES_TYPE_LittleFS
 	
 lib_deps = 
 	${blip.lib_deps}
@@ -332,7 +335,6 @@ build_flags =
 	-D USE_SERIAL
 	-D USE_SERVER
 	-D WS_MAX_QUEUED_MESSAGES=64
-	-D USE_ASYNC_WEBSOCKET=0
 	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
 	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D DISPLAY_SHOW_DBG
@@ -346,7 +348,7 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON=39
 	-D POWER_WAKEUP_BUTTON_STATE=false
 	-D USE_FILES
-	-D FILES_TYPE_SPIFFS
+	-D FILES_TYPE_LittleFS
 	-D USE_MOTION
 	-D IMU_TYPE_M5MPU
 
@@ -379,7 +381,6 @@ build_flags =
 	-D USE_SERIAL
 	-D USE_SERVER
 	-D WS_MAX_QUEUED_MESSAGES=64
-	-D USE_ASYNC_WEBSOCKET=0
 	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
 	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D USE_WIFI
@@ -468,7 +469,7 @@ build_flags =
 	-D USE_STREAMING
 	-D USE_ARTNET
 	-D USE_FILES
-	-D FILES_TYPE_SPIFFS
+	-D FILES_TYPE_LittleFS
 	-D USE_IO
 	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
@@ -526,7 +527,7 @@ build_flags =
 	-D PWMLED_DEFAULT_RESOLUTION=14 
 	-D PWMLED_DEFAULT_FREQUENCY=1 
 	-D USE_FILES
-	-D FILES_TYPE_SPIFFS
+	-D FILES_TYPE_LittleFS
 	-D USE_IO
 	-D IO_DEFAULT_PIN=15
 	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
@@ -551,7 +552,7 @@ build_flags =
 	-D BLIP_XIAOCUBE
 	-D USE_SERIAL
 	-D USE_FILES
-	-D FILES_TYPE_SPIFFS
+	-D FILES_TYPE_LittleFS
 	-D USE_IO
 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
 	-D USE_ESPNOW
