creator club brightness factor

--- a/platformio.ini
+++ b/platformio.ini
@@ -106,7 +106,6 @@ build_flags =
 	-D LEDSTRIP_MAX_COUNT=1
 
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	; -D LED_BRIGHTNESS_FACTOR=0.4f
 	; -D LED_DEFAULT_MAX_POWER=1200
 	-D PLAYBACK_USE_ALPHA
 	-D PLAYBACK_MAX_SCRIPTS=32
@@ -156,6 +155,7 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 
+	-D LED_BRIGHTNESS_FACTOR=0.5f
 	-D LED_DEFAULT_COUNT=32
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=25
