--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,11 @@
         "memory_resource": "cpp",
         "optional": "cpp",
         "numbers": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "condition_variable": "cpp",
+        "map": "cpp",
+        "mutex": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
     }
 }
