--- a/platformio.ini
+++ b/platformio.ini
@@ -156,6 +156,7 @@ build_flags =
 	-D USE_STREAMING
 
 	-D LED_BRIGHTNESS_FACTOR=0.5f
+	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_DEFAULT_COUNT=32
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=25
