use FastLED for club

--- a/platformio.ini
+++ b/platformio.ini
@@ -155,7 +155,8 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 
-	-D LED_BRIGHTNESS_FACTOR=0.5f
+	-D LED_USE_FASTLED
+	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_DEFAULT_COUNT=32
 	-D LED_DEFAULT_EN_PIN=27
@@ -185,9 +186,9 @@ build_flags =
 
 	-D IO_DEFAULT_PIN=17
 
-
-	; -D USE_BEHAVIOUR
-; upload_port = COM8
+lib_deps = 
+	${creator.lib_deps}
+	FastLED
 
 [env:creatorball]
 extends = creator
